优化数据
